--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "devDependencies": {
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
+        "pino": "^7.5.1",
         "postcss": "^8.1.14",
         "resolve-url-loader": "^3.1.4",
         "sass": "^1.45.0",
         "sass-loader": "^12.4.0",
         "vue": "^3.2.26",
-        "vuex": "^4.0.2"
+        "vue-loader": "^17.0.0"
     },
     "dependencies": {
         "body-scroll-lock": "^3.1.5",
