--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.0",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "pino": "^7.5.1",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.5",
         "resolve-url-loader": "^3.1.4",
         "sass": "^1.45.0",
         "sass-loader": "^12.4.0",
+        "tailwindcss": "^3.0.2",
         "vue": "^3.2.26",
         "vue-loader": "^17.0.0"
     },
